--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "sbn-tutor-board",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -49,7 +49,7 @@
     "input-otp": "1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.3.4",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
